--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="title">
       <h1>Broadway Design</h1>
-    </div>
+    
       <nav class="links">
       <p>Home</p>
       <p>About</p>
@@ -18,12 +18,13 @@
       <p>Team</p>
       <p>Contact</p>
       </nav>
+    </div>
 
 
 
     <h2>Our Process</h2>
 
-      <div class="container">
+      <div class="container2">
         <h3>Identity</h3>
         <p>We focus on the most important details.</p>
 
@@ -32,8 +33,9 @@
 
         <h3>Execute</h3>
         <p>We put everything we have into our work</p>
-
-        <p>Designed in New York</p>
+        <div class=centerText>
+          <p>Designed in New York</p>
+        </div>
 
         <h3>Portolio</h3>
         <p>Coming Soon</p>
