--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <h1>Broadway Design</h1>
     
       <nav class="links">
-      <p>Home</p>
-      <p>About</p>
-      <p>Work</p>
-      <p>Team</p>
-      <p>Contact</p>
+      <p><a href="#home">Home</a></p>
+      <p><a href="#about">About</a></p>
+      <p><a href="#work">Work</a></p>
+      <p><a href="#team">Team</a></p>
+      <p><a href="#contact">Contact</a></p>
       </nav>
     </div>
 
@@ -33,7 +33,7 @@
 
         <h3>Execute</h3>
         <p>We put everything we have into our work</p>
-        <div class=centerText>
+        <div class="centerText">
           <p>Designed in New York</p>
         </div>
 
@@ -50,7 +50,7 @@
 	  </div>
 
     <div class="footer">
-      <p>Broadway 2017 Home About Work Team Contact</p>
+      <p>Broadway 2017 <span id="#home">Home</span> <span id="#about">About</span> <span id="#work">Work</span> <span id="#team">Team</span> <span id="#contact">Contact</span></p>
     </div>
 
 
