--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
 
       <div class="container2">
         <h3>Identity</h3>
+        <img src="./resources/icons/identify.svg" />
         <p>We focus on the most important details.</p>
 
         <h3>Understand</h3>
+        <img src="./resources/icons/understand.svg" />
         <p>We study our projects inside and out.</p>
 
         <h3>Execute</h3>
+        <img src="./resources/icons/execute.svg" />
         <p>We put everything we have into our work</p>
         <div class="centerText">
           <p>Designed in New York</p>
@@ -50,7 +53,7 @@
 	  </div>
 
     <div class="footer">
-      <p>Broadway 2017 <span id="#home">Home</span> <span id="#about">About</span> <span id="#work">Work</span> <span id="#team">Team</span> <span id="#contact">Contact</span></p>
+      <p>Broadway 2017 <span id=home>Home</span> <span id=about>About</span> <span id=work>Work</span> <span id=team>Team</span> <span id=contact>Contact</span></p>
     </div>
 
 
